Fixes tooltip position on mobile

--- a/client/stylesheets/globals.import.styl
+++ b/client/stylesheets/globals.import.styl
@@ -8,14 +8,16 @@ p
 ul
   font-weight 400
 
-p, 
+p 
+  @extend .white-shadow
+
 ul,
 h1,
 h2,
 h3,
 h4
   @extend .white-shadow
-
+  letter-spacing .01em
 a, 
 button,
 tr
